[package]
name = "contacts_on_all_sides"
version = "0.3.0"
authors = ["mohamedSulaimanAlmarzooqi <uae566340007@hotmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#lto = "fat"

[dependencies]
rand = "0.8.3"
tts = {version = "0.25.5", features = ["tolk"]}
fernet = "0.2.0"
synthizer = "0.5.6"
anyhow = "1.0.35"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
winit = "0.28.1"
winit_input_helper = "0.14.0"
once_cell = "1.17.1"
msgbox = "0.6.1"
backtrace = "0.3.61"
directories = "4.0.1"
log4rs = "1.2.0"
log = "0.4.17"
clipboard = "0.5.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
enet = { path = "../enet-rs" }
prost = "0.11.8"
prost-types = "0.11.8"
os-version = "0.2.0"
dirs = "5.0.1"
unicode_names2 = "0.6.0"
hardware-id = "0.3.0"
serde_derive = "1.0.188"
[build-dependencies]
prost-build = "0.11"
