[package]
name = "server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
fernet = "0.2.1"
indexmap = "1.9.3"
lazy_static = "1.4.0"
once_cell = "1.17.1"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
enet = { path = "../enet-rs" }
prost = "0.11.8"
prost-types = "0.11.8"
rand = "0.8.5"
humantime = "2.1.0"
chrono = { version = "0.4.26", features = ["serde"] }
semver = "1.0.18"

[build-dependencies]
prost-build = "0.11"
